[package]
name = "up-transport-socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1"
chrono = "0.4.31"
protobuf = { version = "3.3" }
up-rust = { version = "0.1.5" }
env_logger = "0.11.2"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }